[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

dynamic = ["version"]

[project]
name = "ml-tools"
dynamic = ["version"]
authors = [
  {name = "David Graey", email = "graeyband@gmail.com" },
]
dependencies = [
    "matplotlib",
    "numpy",
    "scipy"
]

description = "tools for ML, supervised and unsupervised tasks"
readme = "README.md"
requires-python = ">=3.10"


[project.optional-dependencies]
gui=["matplotlib.pyplot"]
audio=["librosa", "wave"]


[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Repository" = "https://github.com/me/spam.git"
"Changelog" = "https://github.com/me/spam/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"